Added logging when fetching BoardGames by id